Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -2812,6 +2812,16 @@ font-weight: bold !important;
 .custom_ui_13884_13886 .nav-link.active .css__title{
     color: #000000;
 }
+
+.custom_ui_13884_13886 .btn {
+    color: #000000;
+    background-color: #FFFFFF;
+}
+.custom_ui_13884_13885 .btn {
+    color: #FFFFFF;
+    background-color: #000000;
+}
+
 .nav-pills .nav-link.active {
     color: #000000 !important;
     background-color: #FFFFFF !important;
